--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
 
+    <p>Before the script</p>
+
+    <script> alert('Hello world');</script>
+    
+    <p>After the script</p>
+
 </body>
 </html>
