add external js

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
     <p>Before the script</p>
 
-    <script> alert('Hello world');</script>
-    
+    <!-- external files -->
+    <script src="js/hello.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.11/lodash.js"></script>
+
     <p>After the script</p>
 
 </body>
