--- a/index.html
+++ b/index.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>javascript.info</title>
-    <script src=""></script>
+    <title>Introducción</title>
 </head>
+
 <body>
 
-    <p>Before the script</p>
-
-    <!-- external files -->
-    <script src="js/hello.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.11/lodash.js"></script>
-
-    <p>After the script</p>
-
+    <script src="app.js"></script>
 </body>
+
 </html>
