--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
 
+    <button>Click me</button>
+
+
+    <script src="https://unpkg.com/@reactivex/rxjs@5.3.0/dist/global/Rx.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
